--- a/_stubs/styleguidebs3.html
+++ b/_stubs/styleguidebs3.html
@@ -862,8 +862,8 @@
     <script src="../../../themes/bootstrap3/lib/moment.js" type="text/javascript"></script>
 
     <!-- Bootstrap3 -->
-    <script src="../../../themes/bootstrap4/lib/bootstrap/js/bootstrap.js" type="text/javascript"></script>
-    <!--<link href="../../../themes/bootstrap3/lib/bootstrap/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css">-->
+    <script src="../../../themes/bootstrap3/lib/bootstrap/js/bootstrap.js" type="text/javascript"></script>
+    <link href="../../../themes/bootstrap3/lib/bootstrap/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css">
     <link href="../../../themes/bootstrap3/lib/bootstrap_switch/css/bootstrap-switch.min.css" media="all" rel="stylesheet" type="text/css">
     <script src="../../../themes/bootstrap3/lib/bootstrap_switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
     <script src="../../../themes/bootstrap3/lib/bootstrap_datetimepicker/js/bootstrap-datetimepicker.js" type="text/javascript"></script>
