library tether added

--- a/_stubs/styleguide.html
+++ b/_stubs/styleguide.html
@@ -858,6 +858,10 @@
     <script src="../../../themes/bootstrap3/lib/fileupload/js/jquery.iframe-transport.js" type="text/javascript"></script>
     <link href="../../../themes/bootstrap3/lib/fileupload/css/jquery.fileupload.css" media="all" rel="stylesheet" type="text/css">
 
+    <!-- tether -->
+    <script src="../../../themes/bootstrap4/lib/tether/js/tether.min.js" type="text/javascript"></script>
+    <link href="../../../themes/bootstrap4/lib/tether/css/tether.min.css" media="all" rel="stylesheet" type="text/css">
+
     <!-- moment -->
     <script src="../../../themes/bootstrap3/lib/moment.js" type="text/javascript"></script>
 
