--- a/_stubs/styleguidebs3.html
+++ b/_stubs/styleguidebs3.html
@@ -786,13 +786,14 @@
             }],
             "language": {"patterns": {"datetime": "yyyy-mm-dd hh:mm:ss", "date": "yyyy-mm-dd"}, "languageCode": "en-GB"}
         };
+
         var bqConfiguration = {
             baseUri: '../../',
-            resourceUri: '/v2/',
+            resourceUri: '/',
             blueriqPath: 'core/',
             themePath: 'themes/bootstrap4/',
             developmentMode: true,
-            sessionTimeout: 300,
+            sessionTimeout: 300
         };
         var bqSessionId = 'my-session-id';
     </script>
